<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout_loginEmail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mutual_fund_5"
    android:gravity="center"
    tools:context=".LoginWithEmailActivity">

    <ScrollView
	android:layout_width="300dp"
	android:layout_height="450dp"
	android:background="@drawable/background_shape"
	android:orientation="vertical"
	android:scrollbars="none"
	android:padding="15dp">

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@drawable/background_shape"
	    android:orientation="vertical"
	    android:padding="10dp">

	    <com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp">

		<com.google.android.material.textfield.TextInputEditText
		    android:id="@+id/editText_login_email"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:drawableStart="@drawable/email_icon_grey"
		    android:drawablePadding="10dp"
		    android:hint="@string/email_id"
		    android:inputType="textEmailAddress" />

	    </com.google.android.material.textfield.TextInputLayout>

	    <com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="11dp"
		app:passwordToggleEnabled="true">

		<com.google.android.material.textfield.TextInputEditText
		    android:id="@+id/editText_login_password"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/password"
		    android:inputType="textPassword" />

	    </com.google.android.material.textfield.TextInputLayout>

	    <TextView
		android:id="@+id/textViewForgotPassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="end"
		android:text="@string/forget_password"
		android:textStyle="italic"
		android:textSize="16sp"
		android:textColor="#090909"/>

	    <Button
		android:id="@+id/btnSignInEmail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:background="@drawable/button_shape"
		android:backgroundTint="#5aa897"
		android:text="@string/Login"
		android:textSize="20sp"
		android:textColor="#FFFF"
		android:layout_gravity="center"
		android:layout_margin="5dp"
		android:paddingHorizontal="15dp"
		android:paddingVertical="8dp"
		android:shadowColor="#0a043c"
		android:shadowDx="5"
		android:shadowDy="5"
		android:shadowRadius="10"
		android:textStyle="bold"/>

	    <TextView
		android:id="@+id/textViewDontHaveAccount"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="end"
		android:layout_marginTop="10dp"
		android:text="@string/don_t_have_an_account_create"
		android:textColor="#090909"
		android:textSize="16sp"/>

	    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:gravity="clip_horizontal|center_horizontal"
		android:layout_gravity="clip_horizontal|center"
		android:orientation="horizontal">

		<TableRow
		    android:id="@+id/hr"
		    android:layout_width="90dp"
		    android:layout_height="1dp"
		    android:layout_marginTop="20dp"
		    android:background="#393838"/>

		<TextView
		    android:id="@+id/textView_OR"
		    android:layout_width="44dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginTop="7dp"
		    android:text="@string/or"
		    android:textSize="20sp"
		    android:textStyle="bold"
		    android:textColor="#090909"
		    android:textAlignment="center" />

		<TableRow
		    android:id="@+id/dr"
		    android:layout_width="90dp"
		    android:layout_height="1dp"
		    android:layout_marginTop="20dp"
		    android:background="#393838"/>

	    </LinearLayout>

	    <TextView
		android:id="@+id/textViewSignInPhone"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/sign_in_with"
		android:layout_gravity="center"
		android:textAlignment="center"
		android:layout_marginTop="11dp"
		android:textColor="#090909"
		android:textSize="18sp"/>

	    <Button
		android:id="@+id/btnSignInPhone"
		android:layout_width="wrap_content"
		android:layout_height="50dp"
		android:layout_gravity="center"
		android:background="@drawable/btnblueish"
		android:layout_marginTop="13dp"
		android:drawableStart="@drawable/phone_icon"
		android:drawablePadding="5dp"
		android:padding="10dp"
		android:text="@string/phone"
		android:textSize="20sp"
		android:textStyle="bold"
		android:textColor="#FFFFFF"/>

	</LinearLayout>

    </ScrollView>

</LinearLayout>