<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/mutual_fund_1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ScrollView
	android:layout_width="300dp"
	android:layout_height="450dp"
	android:background="@drawable/background_shape"
	android:orientation="vertical"
	android:scrollbars="none"
	android:padding="15dp">

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">

	    <com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp">

		<com.google.android.material.textfield.TextInputEditText
		    android:id="@+id/editText_register_firstname"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:hint="@string/firstname"
		    android:inputType="textPersonName"
		    android:singleLine="true" />

	    </com.google.android.material.textfield.TextInputLayout>

	    <com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp">

		<com.google.android.material.textfield.TextInputEditText
		    android:id="@+id/editText_register_lastname"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:hint="@string/lastname"
		    android:inputType="textPersonName"
		    android:singleLine="true" />

	    </com.google.android.material.textfield.TextInputLayout>

	    <com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp">

		<com.google.android.material.textfield.TextInputEditText
		    android:id="@+id/editText_register_email"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:drawableStart="@drawable/email_icon_grey"
		    android:drawablePadding="10dp"
		    android:hint="@string/email"
		    android:inputType="textEmailAddress"
		    android:singleLine="true" />

	    </com.google.android.material.textfield.TextInputLayout>

	    <com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		app:passwordToggleEnabled="true">

		<com.google.android.material.textfield.TextInputEditText
		    android:id="@+id/editText_register_password"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:hint="@string/password"
		    android:inputType="textPassword"
		    android:singleLine="true" />

	    </com.google.android.material.textfield.TextInputLayout>

	    <com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		app:passwordToggleEnabled="true">

		<com.google.android.material.textfield.TextInputEditText
		    android:id="@+id/editText_register_confirmpassword"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:hint="@string/confirmpassword"
		    android:inputType="textPassword"
		    android:singleLine="true" />

	    </com.google.android.material.textfield.TextInputLayout>

	    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="11dp"
		android:orientation="horizontal">

		<com.hbb20.CountryCodePicker
		    android:id="@+id/countryCode"
		    android:layout_width="120dp"
		    android:layout_height="match_parent" />

		<com.google.android.material.textfield.TextInputLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">

		    <com.google.android.material.textfield.TextInputEditText
			android:id="@+id/editText_MobNo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/mobile_number"
			android:inputType="number" />

		</com.google.android.material.textfield.TextInputLayout>

	    </LinearLayout>

	    <Button
		android:id="@+id/btn_register"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_margin="5dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/button_shape"
		android:backgroundTint="#51c2d5"
		android:paddingHorizontal="15dp"
		android:paddingVertical="8dp"
		android:shadowColor="#0a043c"
		android:shadowDx="5"
		android:shadowDy="5"
		android:shadowRadius="10"
		android:text="@string/register"
		android:textColor="#f8f1f1"
		android:textSize="20sp"
		android:textStyle="bold" />

	    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="clip_horizontal|center"
		android:layout_marginTop="15dp"
		android:gravity="clip_horizontal|center_horizontal"
		android:orientation="horizontal">

		<TableRow
		    android:id="@+id/hr"
		    android:layout_width="90dp"
		    android:layout_height="1dp"
		    android:layout_marginTop="20dp"
		    android:background="#393838" />

		<TextView
		    android:id="@+id/textView_OR"
		    android:layout_width="44dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginTop="7dp"
		    android:text="@string/or"
		    android:textAlignment="center"
		    android:textColor="#090909"
		    android:textSize="20sp"
		    android:textStyle="bold" />

		<TableRow
		    android:id="@+id/dr"
		    android:layout_width="90dp"
		    android:layout_height="1dp"
		    android:layout_marginTop="20dp"
		    android:background="#393838" />

	    </LinearLayout>

	    <TextView
		android:id="@+id/textViewSignIn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:text="@string/sign_in_with"
		android:textAlignment="center"
		android:textColor="#0C0C0C"
		android:textSize="18sp" />

	    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="clip_horizontal|center"
		android:layout_marginTop="15dp"
		android:baselineAligned="false"
		android:gravity="clip_horizontal|center_horizontal"
		android:orientation="horizontal">

		<Button
		    android:id="@+id/btnSignInEmail"
		    android:layout_width="wrap_content"
		    android:layout_height="40dp"
		    android:layout_marginStart="5dp"
		    android:layout_marginEnd="5dp"
		    android:layout_weight="1"
		    android:background="@drawable/btnred"
		    android:drawableStart="@drawable/email_icon"
		    android:drawablePadding="2dp"
		    android:padding="8dp"
		    android:text="@string/email_sign_in"
		    android:textColor="#FFFFFF" />

		<Button
		    android:id="@+id/btnSignInPhone"
		    android:layout_width="wrap_content"
		    android:layout_height="40dp"
		    android:layout_marginStart="5dp"
		    android:layout_marginEnd="5dp"
		    android:layout_weight="1"
		    android:background="@drawable/btnblueish"
		    android:drawableStart="@drawable/phone_icon"
		    android:drawablePadding="2dp"
		    android:padding="8dp"
		    android:text="@string/phone_sign_in"
		    android:textColor="#FFFFFF" />

	    </LinearLayout>

	</LinearLayout>

    </ScrollView>

</LinearLayout>