<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_loginEmail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mutual_fund_5"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginWithPhoneActivity">

    <LinearLayout
	android:layout_width="280dp"
	android:layout_height="wrap_content"
	android:padding="15dp"
	android:background="@drawable/background_shape"
	android:orientation="vertical">

    <TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/verify_phone_number"
	android:layout_gravity="center"
	android:textSize="20sp"
	android:textColor="#090909"
	android:layout_marginTop="20dp"/>

    <LinearLayout
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="20dp"
	android:orientation="horizontal">

	<com.hbb20.CountryCodePicker
	    android:id="@+id/countryCodePicker"
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:layout_height="match_parent" />

	<EditText
	    android:id="@+id/editTextPhoneNumber"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:layout_marginStart="8dp"
	    android:inputType="phone"/>

    </LinearLayout>

    <Button
	android:id="@+id/btnSendOTP"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginTop="20dp"
	android:background="@drawable/button_shape"
	android:backgroundTint="#31326f"
	android:text="@string/send_otp"
	android:textSize="20sp"
	android:textColor="#FFFF"
	android:layout_gravity="center"
	android:layout_margin="5dp"
	android:paddingHorizontal="15dp"
	android:paddingVertical="8dp"
	android:shadowColor="#0a043c"
	android:shadowDx="5"
	android:shadowDy="5"
	android:shadowRadius="10"
	android:textStyle="bold"/>

    <TextView
	android:id="@+id/textSignUp"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="end"
	android:layout_marginTop="10dp"
	android:text="@string/don_t_have_an_account_create"
	android:textColor="#090909"
	android:textSize="16sp" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:gravity="clip_horizontal|center_horizontal"
	    android:layout_gravity="clip_horizontal|center"
	    android:orientation="horizontal">

	    <TableRow
		android:id="@+id/hr"
		android:layout_width="90dp"
		android:layout_height="1dp"
		android:layout_marginTop="20dp"
		android:background="#393838"/>

	    <TextView
		android:id="@+id/textView_OR"
		android:layout_width="44dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="7dp"
		android:text="@string/or"
		android:textSize="20sp"
		android:textStyle="bold"
		android:textColor="#090909"
		android:textAlignment="center" />

	    <TableRow
		android:id="@+id/dr"
		android:layout_width="90dp"
		android:layout_height="1dp"
		android:layout_marginTop="20dp"
		android:background="#393838"/>

	</LinearLayout>

    <TextView
	android:id="@+id/txtViewSignInEmail"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:text="@string/sign_in_with"
	android:layout_gravity="center"
	android:textAlignment="center"
	android:layout_marginTop="11dp"
	android:textColor="#090909"
	android:textSize="18sp"/>

    <Button
	android:id="@+id/btnSignInEmail"
	android:layout_width="wrap_content"
	android:layout_height="50dp"
	android:layout_gravity="center"
	android:background="@drawable/btnred"
	android:layout_marginTop="13dp"
	android:drawableStart="@drawable/phone_icon"
	android:drawablePadding="5dp"
	android:padding="10dp"
	android:text="@string/email_sign_in"
	android:textSize="20sp"
	android:textStyle="bold"
	android:textColor="#FFFFFF"/>

    </LinearLayout>

</LinearLayout>