<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/mutual_fund_2"
    tools:context=".LoginActivity">

    <LinearLayout
	android:id="@+id/linearLayout_activity_main_menu"
	android:layout_width="285dp"
	android:layout_height="wrap_content"
	android:background="@drawable/background_shape"
	android:padding="10dp"
	android:orientation="vertical">

	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="MUTUAL FUND"
	    android:textColor="#BE0000"
	    android:textSize="30sp"
	    android:textStyle="bold"
	    android:textAlignment="center"
	    android:shadowColor="#810000"
	    android:shadowDx="5"
	    android:shadowDy="5"
	    android:shadowRadius="8" />

	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="15dp"
	    android:text="@string/mutual_fund_sahi_hai"
	    android:textColor="#000000"
	    android:textSize="20sp"
	    android:textStyle="bold"
	    android:textAlignment="center"
	    android:fontFamily="cursive"
	    android:shadowColor="#150E56"
	    android:shadowDx="5"
	    android:shadowDy="5"
	    android:shadowRadius="30"/>

	<Button
	    android:id="@+id/btnSignWithEmail"
	    android:layout_width="240dp"
	    android:layout_height="wrap_content"
	    android:ems="11"
	    android:layout_marginTop="10dp"
	    android:padding="10dp"
	    android:gravity="center"
	    android:layout_gravity="center"
	    android:background="@drawable/btnred"
	    android:drawableStart="@drawable/email_icon"
	    android:drawablePadding="2dp"
	    android:text="@string/sign_in_with_email"
	    android:textColor="#EDFFEC"
	    android:textStyle="bold"
	    android:textSize="15sp"/>

	<Button
	    android:id="@+id/btnSignWithPhone"
	    android:layout_width="240dp"
	    android:layout_height="wrap_content"
	    android:ems="11"
	    android:layout_marginTop="15dp"
	    android:padding="9dp"
	    android:layout_gravity="center"
	    android:background="@drawable/btnblueish"
	    android:drawableStart="@drawable/phone_icon"
	    android:drawablePadding="2dp"
	    android:text="@string/sign_in_with_phone"
	    android:textColor="#EDFFEC"
	    android:textStyle="bold"
	    android:textSize="15sp"/>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:gravity="clip_horizontal|center_horizontal"
	    android:layout_gravity="clip_horizontal|center"
	    android:orientation="horizontal">

	    <TableRow
		android:id="@+id/hr"
		android:layout_width="90dp"
		android:layout_height="1dp"
		android:layout_marginTop="20dp"
		android:background="#393838"/>

	    <TextView
		android:id="@+id/textView_OR"
		android:layout_width="44dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="7dp"
		android:text="@string/or"
		android:textSize="20sp"
		android:textStyle="bold"
		android:textColor="#090909"
		android:textAlignment="center" />

	    <TableRow
		android:id="@+id/dr"
		android:layout_width="90dp"
		android:layout_height="1dp"
		android:layout_marginTop="20dp"
		android:background="#393838"/>

	</LinearLayout>

	<Button
	    android:id="@+id/btnSignUpEmail"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:ems="7"
	    android:layout_marginTop="20dp"
	    android:layout_gravity="center_horizontal"
	    android:background="@drawable/button_shape"
	    android:text="@string/sign_up"
	    android:textStyle="bold"
	    android:textSize="17sp"
	    android:textColor="#F9F3F3"/>

    </LinearLayout>

</LinearLayout>