<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:cardElevation="10dp"
	app:cardCornerRadius="20dp">
	
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:padding="30dp"
	    android:background="#e8ffff">

	    <TextView
		android:id="@+id/text_alert"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/sure_text_delete"
		android:padding="10dp"
		android:gravity="center"
		android:textColor="#ec0101"
		android:shadowColor="#ff6969"
		android:shadowDx="-2"
		android:shadowDy="-2"
		android:shadowRadius="1"
		android:textSize="18sp"
		android:textStyle="bold|italic"/>

	    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="15dp"
		android:layout_below="@id/text_alert"
		android:gravity="center">

		<Button
		    android:id="@+id/conf_yesButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginEnd="30dp"
		    android:background="#ffefa0"
		    android:text="@string/yes_text"
		    android:textSize="18sp"
		    android:textStyle="italic|bold"
		    android:textColor="#0278ae"/>

		<Button
		    android:id="@+id/conf_noButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginStart="30dp"
		    android:background="#ffefa0"
		    android:text="@string/no_text"
		    android:textSize="18sp"
		    android:textStyle="italic|bold"
		    android:textColor="#d7385e"/>

	    </LinearLayout>

	</RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>